# plasma_widget_rssnotify

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  cmake_uninstall.cmake  compile.sh  config.ui  feeddata.h  install_manifest.txt  news.cpp  news.h  news.moc  plasma-applet-rssnotify.desktop  plasma_applet_rssnotify_automoc.cpp.files  scroller.cpp  scroller.h  scroller.moc  ui_config.h
.svn/: entries
svg/: .directory
